@@ -14,4 +14,4 @@ export(cosine)
 export(covar)
 export(pcor)
 export(sparsity)
-useDynLib(coop, R_co_mat, R_co_vecvec, R_co_sparse, R_sparsity_int, R_sparsity_dbl, R_csc_to_coo, R_fast_naomit, R_naomit_vecvec)
+useDynLib(coop, R_co_mat, R_co_mat_pairwise, R_co_vecvec, R_co_sparse, R_sparsity_int, R_sparsity_dbl, R_csc_to_coo, R_fast_naomit, R_naomit_vecvec)
