@@ -1,6 +1,9 @@
 check_use <- function(use)
 {
-  match.arg(tolower(use), c("everything", "all.obs", "complete.obs"))
+  match.arg(
+    tolower(use),
+    c("everything", "all.obs", "complete.obs", "pairwise.complete.obs")
+  )
 }
 
 
